--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,36 @@
 version: '3.7'
 services:
-  app:
+  api-dev:
     container_name: core-bank
     build:
       context: .
-      target: production
+      target: development
     volumes:
-      - .:/home/node/core-bank
-      - /home/node/core-bank/node_modules
+      - .:/home/node
+      - /home/node/node_modules
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
-    command: node dist/main.js
+    depends_on:
+      - postgres-dev
+    command: npm run start:dev
     env_file:
-      - .env
+      - .env.dev
+
+  postgres-dev:
+    container_name: postgres
+    image: postgres:14-alpine
+    restart: always
+    env_file:
+      - .env.dev
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+    ports:
+      - 5432:${POSTGRES_PORT}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
