--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
 SERVER_PORT=3000
-POSTGRES_USER=localhost
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=core-bank
 POSTGRES_PORT=5432
+POSTGRES_URL=postgres
