--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,32 @@ version: '3.7'
 services:
   api-dev:
     container_name: core-bank
+    restart: always
     build:
       context: .
-      target: development
-    volumes:
-      - .:/home/node
-      - /home/node/node_modules
+      target: production
+    env_file: .env.dev
     ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
+      - 3000:3000
     depends_on:
       - postgres-dev
-    command: npm run start:dev
-    env_file:
-      - .env.dev
 
   postgres-dev:
     container_name: postgres
-    image: postgres:14-alpine
+    image: postgres:14
     restart: always
-    env_file:
-      - .env.dev
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_PORT: ${POSTGRES_PORT}
+    env_file: .env.dev
     ports:
-      - 5432:${POSTGRES_PORT}
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      - 5432:5432
 
-volumes:
-  pgdata:
+  pgAdmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: luis@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres-dev
