--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles"
+    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
+    "typeorm": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/.bin/typeorm",
+    "migration:generate": "npm run typeorm -- migration:generate --config src/infrastructure/database/database.config -n",
+    "migration:run": "npm run typeorm -- migration:run  --config src/infrastructure/database/database.config",
+    "migration:revert": "npm run typeorm -- migration:revert  --config src/infrastructure/database/database.config"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -28,6 +32,7 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "class-validator": "^0.13.2",
+    "env-var": "^7.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
