--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "env-var": "^7.1.1",
     "jest-config": "^27.5.1",
